package proto_user;

message User {
  optional uint64 id = 1;
  optional string display_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message RegisterUser {
  required User user = 1;
  optional string redirect_uri = 2;
  optional string locale = 3 [default = "en"];
}

message RegisterResponse {
  optional bool valid = 1;
  optional string redirect_uri = 2;
  message InputError {
    required string name = 1;
    required string error_message = 2;
  }
  repeated InputError errors = 3;
  optional string locale = 4 [default = "en"];
}

message AuthenticateUser {
  optional string email = 1;
  optional string password = 2;
  optional string locale = 3 [default = "en"];
}

message AuthenticateResult {
  optional string sid = 1;
  optional string locale = 2 [default = "en"];
}
